crates/parser/src/tests/snapshots/unop_invalid.snap
---
source: crates/parser/src/tests.rs
assertion_line: 268
expression: "(test[1], ast, ast_string)"
---
- "*2"
- Err:
    message: "Unknown unary operator: `*`"
    line: 0
    column: 0
- "Parsing error: Unknown unary operator: `*`"

