crates/parser/src/tests/snapshots/unop_sub.snap
---
source: crates/parser/src/tests.rs
assertion_line: 272
expression: "(test[1], ast, ast_string)"
---
- 3 - -21
- Ok:
    nodes:
      - BinOp:
          op: Sub
          lhs:
            Lit:
              value:
                UInt64: 3
          rhs:
            UnOp:
              op: Sub
              rhs:
                Lit:
                  value:
                    UInt64: 21
- (- 3 (- 21))

